# Library-Management-System

./: CMakeLists.txt  LibraryManagementSystem.pro  test_books.txt
src/: BookList.cpp  BookList.h  MainWindow.cpp  MainWindow.h  test_backend.cpp
untitled/: CMakeLists.txt
